<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/ic_reminders"
            android:title="@string/menu_reminders" />
        <item
            android:id="@+id/nav_add_label"
            android:icon="@drawable/ic_create_new_label"
            android:title="@string/menu_add_label" />
        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_archive"
            android:title="@string/menu_archive" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_trash"
            android:title="@string/menu_trash" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help_feedback"/>

    </group>

</menu>
