<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context="com.bridgelabzs.login.LoginActivity">

 <ImageView
     android:id="@+id/imageView"
     android:layout_width="wrap_content"
     android:layout_height="0dp"
     android:layout_marginStart="200dp"
     android:layout_marginLeft="200dp"
     android:layout_marginTop="50dp"
     android:layout_marginEnd="90dp"
     android:layout_marginRight="90dp"
     android:layout_marginBottom="550dp"
     android:scaleType="centerInside"
     android:src="@drawable/logo"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.821"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.0" />

 <TextView
     android:id="@+id/textView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="90dp"
     android:layout_marginLeft="90dp"
     android:layout_marginTop="10dp"
     android:layout_marginEnd="90dp"
     android:layout_marginRight="90dp"
     android:layout_marginBottom="500dp"
     android:text="Fundoo"
     android:textAllCaps="false"
     android:textColor="#673AB7"
     android:textSize="40sp"
     android:textStyle="bold"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.597"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/imageView"
     app:layout_constraintVertical_bias="0.0" />

 <TextView
     android:id="@+id/textView2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="90dp"
     android:layout_marginLeft="90dp"
     android:layout_marginTop="10dp"
     android:layout_marginEnd="90dp"
     android:layout_marginRight="90dp"
     android:layout_marginBottom="434dp"
     android:text="Login Here"
     android:textSize="25dp"
     android:textStyle="bold"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.542"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/imageView"
     app:layout_constraintVertical_bias="0.75" />

 <ImageView
     android:id="@+id/imageView2"
     android:layout_width="44dp"
     android:layout_height="67dp"
     android:layout_marginStart="150dp"
     android:layout_marginLeft="150dp"
     android:layout_marginTop="220dp"
     android:layout_marginEnd="100dp"
     android:layout_marginRight="100dp"
     android:layout_marginBottom="650dp"
     android:scaleType="fitCenter"
     android:src="@drawable/userlogin"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.0" />

 <EditText
     android:id="@+id/username"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="24dp"
     android:layout_marginTop="304dp"
     android:layout_marginEnd="24dp"
     android:hint="@string/prompt_email"
     android:inputType="textEmailAddress"
     android:selectAllOnFocus="true"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="1.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />

 <EditText
     android:id="@+id/password"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="24dp"
     android:layout_marginTop="8dp"
     android:layout_marginEnd="24dp"
     android:hint="@string/prompt_password"
     android:imeActionLabel="@string/action_log_in_short"
     android:imeOptions="actionDone"
     android:inputType="textPassword"
     android:selectAllOnFocus="true"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="1.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/username" />

 <Button
     android:id="@+id/login"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="start"
     android:layout_marginStart="48dp"
     android:layout_marginTop="16dp"
     android:layout_marginEnd="48dp"
     android:layout_marginBottom="64dp"
     android:enabled="true"
     android:onClick="onClickLogin"
     android:text="@string/action_log_in"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.496"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/password"
     app:layout_constraintVertical_bias="0.089" />

 <ProgressBar
     android:id="@+id/loading"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_marginStart="32dp"
     android:layout_marginTop="64dp"
     android:layout_marginEnd="32dp"
     android:layout_marginBottom="64dp"
     android:visibility="gone"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="@+id/password"
     app:layout_constraintStart_toStartOf="@+id/password"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.3" />

 <Button
     android:id="@+id/registerHere"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="start"
     android:layout_marginStart="48dp"
     android:layout_marginTop="16dp"
     android:layout_marginEnd="48dp"
     android:layout_marginBottom="64dp"
     android:enabled="true"
     android:text="Register Here"
     android:onClick="openRegister"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.517"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/login"
     app:layout_constraintVertical_bias="0.0" />

 <TextView
     android:id="@+id/textView3"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="150dp"
     android:layout_marginLeft="150dp"
     android:layout_marginTop="10dp"
     android:layout_marginEnd="70dp"
     android:layout_marginRight="70dp"
     android:layout_marginBottom="500dp"
     android:onClick="openForgotPassword"
     android:text="Forgot Password ?"
     android:textAllCaps="false"
     android:textColor="#00BCD4"
     android:textSize="20dp"
     android:textStyle="bold"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="1.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/registerHere"
     app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>